Removed console logs, test to fix issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -557,7 +557,8 @@ footer {
 
 @media only screen and (max-width: 814px) and (orientation: landscape) {
   #stats-wrapper {
-    display: none;
+    display: none!important;
+    visibility: hidden; 
   }
   #story {
     font-size: 11.5px;
